Update logo name from 'MyPortfolio' to 'Saagar'

--- a/index.html
+++ b/index.html
@@ -12,7 +12,8 @@
 
     <!-- Navigation -->
     <nav class="navbar">
-        <div class="logo">MyPortfolio<span class="dot">.</span></div>
+        <!-- updated name -->
+        <div class="logo">Saagar<span class="dot">.</span></div>
         <div class="nav-links">
             <a href="#about">About</a>
             <a href="#projects">Work</a>
