check update workflow

--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@
     <!-- Navigation -->
     <nav class="navbar">
         <!-- updated name -->
-        <div class="logo">Saagar S D<span class="dot">.</span></div>
+        <div class="logo">Saagar D<span class="dot">.</span></div>
         <div class="nav-links">
             <a href="#about">About</a>
             <a href="#projects">Work</a>
